# packages/server/openapi.json
@@ -107,16 +107,22 @@
         "tags": [
           "Tasks"
         ],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/CompletedTaskCreateDto"
-                }
+                "$ref": "#/components/schemas/CompletedTasksCreateDto"
               }
             }
           }
@@ -552,21 +558,27 @@
           "id"
         ]
       },
-      "CompletedTaskCreateDto": {
+      "CompletedTasksCreateDto": {
         "type": "object",
         "properties": {
-          "user_id": {
-            "type": "string",
-            "example": "266006070"
+          "tasks": {
+            "example": [
+              1,
+              2,
+              3
+            ],
+            "type": "array",
+            "items": {
+              "type": "number"
+            }
           },
-          "task_id": {
-            "type": "number",
-            "example": 1
+          "increase_mining_rate": {
+            "type": "string",
+            "example": "1e-7"
           }
         },
         "required": [
-          "user_id",
-          "task_id"
+          "tasks"
         ]
       },
       "TaskEntity": {
